--- a/task/style.css
+++ b/task/style.css
@@ -1,12 +1,15 @@
+
 .container {
     display:flex;
     justify-content: center;
-    align-items: center;
-    padding: 250px 50px;
+    justify-items: center;
+
 }
 
 #countDown{
-    
+    flex-wrap: wrap;
     font-size: 6rem;
+    padding: 40px 20px;
     background-color: aqua;
+    border : 4px solid black;
 }
